[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
description = "Yet another simple logger implementation for Rust."
edition = "2021"
license-file = "LICENSE"
name = "yaslog"
version = "0.5.0"

[dependencies]
chrono = "0.4"
fern = "0.6"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_repr = "0.1"
